--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -20,8 +20,7 @@
   "private": true,
   "main": ".vite/build/main.js",
   "scripts": {
-    "start": "nodemon",
-    "start:no-watch": "electron-forge start",
+    "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -77,7 +76,6 @@
     "husky": "^9.1.7",
     "jsdom": "^27.0.0",
     "lint-staged": "^16.1.6",
-    "nodemon": "^3.1.10",
     "prettier": "3.6.2",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.13",
