fix: Add 'Other' section to release-please config (#574)

--- a/.github/release-please/release-please-config.json
+++ b/.github/release-please/release-please-config.json
@@ -58,7 +58,12 @@
       "section": "Miscellaneous Chores",
       "type": "chore",
       "hidden": true
-    }
+    },
+    {
+      "section": "Other",
+      "type": "*",
+      "hidden": true
+    },
   ],
   "packages": {
     "desktop_app": {
